--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch ./src/server.ts",
-    "setup": "tsx ./src/setup.ts"
+    "setup-database": "tsx ./src/setup.ts"
   },
   "keywords": [],
   "author": "",
